# lobster-buffet

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMMERCIAL_STRATEGY.md  GOAL.md  PRODUCT_BRIEF.md  REQUIREMENTS.md
docs/operations/: DISTRIBUTION_HANDOFF_CONTRACT.md  INITIAL_SCHEMA_SLICE.md  LIFECYCLE_APPLY_READINESS.md  LOCAL_ADAPTER_CONTRACT.md  MCP_WRAPPER_COMPATIBILITY.md  OPENCLAW_DYNAMIC_WRAPPER.md  OPERATION_CATALOG.md  PROVIDER_TRANSPORT_DECISION.md  (+2 more)
lobster_buffet/: __init__.py  cli.py  core.py
manifests/: distribution-handoff.v0.1.0.json  local-adapter-capabilities.v0.1.0.json  mcp-wrapper-promotion-gates.v0.1.0.json  operation-catalog.v0.1.0.json  provider-operations.v0.1.0.json  release-compatibility.v0.1.0.json
schemas/: distribution-handoff.v0.1.0.json  lifecycle-apply-readiness.v0.1.0.json  lifecycle-apply-receipt.v0.1.0.json  local-adapter-capabilities.v0.1.0.json  local-adapter-config.v0.1.0.json  local-adapter-fixture.v0.1.0.json  local-adapter-invocation.v0.1.0.json  mcp-wrapper-promotion-gates.v0.1.0.json  operation-catalog.v0.1.0.json  operation-plan.v0.1.0.json  provider-operation-manifest.v0.1.0.json  release-compatibility.v0.1.0.json
scripts/: check_cli_core.py  check_command_adapter_failure_conformance.py  check_initial_operation_schemas.py  check_lifecycle_write_conformance.py  check_local_project_adapter.py  check_mcp_wrapper_packageability.py  local_project_adapter.py  synthetic_local_adapter_command.py  synthetic_local_adapter_failure_command.py
(+84 files in other folders)
